--- a/src/main/resources/static/assets/css/StyleSheet.css
+++ b/src/main/resources/static/assets/css/StyleSheet.css
@@ -133,6 +133,75 @@ body{
         box-shadow: 0 0 50px var(--clr);
     }
 
+.navigation {
+    width: 100%;
+    height: 80px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    border: black;
+    border-color: blue;
+    border-width:2px;
+    border-radius: 10px;
+    
+}
+
+    .navigation ul {
+        display: flex;
+        width: 600px;
+    }
+
+        .navigation ul li {
+            position: relative;
+            list-style: none;
+            width: 100px;
+            height: 60px;
+            z-index: 1;
+        }
+
+            .navigation ul li a {
+                position: relative;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                width: 100%;
+                text-align: center;
+                font-weight: 500;
+            }
+
+                .navigation ul li a .icon {
+                    position: relative;
+                    display: block;
+                    line-height: 70px;
+                    font-size: 1.5em;
+                    text-align: center;
+                    transition: 0.5s;
+                    color: var(--clr);
+                }
+
+            .navigation ul li:hover a .icon {
+                transform: translateY(-20px);
+                color: #3983cc;
+            }
+
+            .navigation ul li a .text {
+                position: absolute;
+                color: var(--clr);
+                font-weight: 400;
+                font-size: 0.75em;
+                letter-spacing: 0.05em;
+                transition: 0.5s;
+                opacity: 0.5;
+                transform: translateY(20px);
+            }
+
+            .navigation ul li:hover a .text {
+                opacity: 1;
+                transform: translateY(8px);
+                color: #3983cc;
+            }
+
 
 .btn-p {
 	display: inline-block;
