--- a/src/main/webapp/WEB-INF/vistas/common/NavigatorCommon.jspf
+++ b/src/main/webapp/WEB-INF/vistas/common/NavigatorCommon.jspf
@@ -1,14 +1,43 @@
 <div class="container-fluid w-100">
-  <div class="d-flex flex-wrap align-items-center justify-content-between py-3 mb-4 border-bottom">
-    <div class="d-flex col-md-5 mb-2 justify-content-start mb-md-0">
-      <ul class="nav">
-        <li><a href="home" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="clientes" class="nav-link px-2 link-dark">Clientes</a></li>
-        <li><a href="prestamos" class="nav-link px-2 link-dark">Prestamos</a></li>
-        <li><a href="usuarios" class="nav-link px-2 link-dark">Usuarios</a></li>
-      </ul>
-    </div>
-    <div class="d-flex col-md-7 justify-content-end align-items-center">
+  <div class="navigation d-flex justify-content-between">
+ 	<div class="d-flex justify-content-start w-75">   
+          <ul class="mt-5">
+              <li class="list active">
+                  <a href="home">
+                      <span class="icon">
+                          <ion-icon name="home-outline"></ion-icon>
+                      </span>
+                      <span class="text">Home</span>
+                  </a>
+              </li>
+              <li class="list">
+                  <a href="clientes">
+                      <span class="icon">
+                          <ion-icon name="people-outline"></ion-icon>
+                      </span>
+                      <span class="text">Clientes</span>
+                  </a>
+              </li>
+              <li class="list">
+                  <a href="prestamos">
+                      <span class="icon">
+                          <ion-icon name="cash-outline"></ion-icon>
+                      </span>
+                      <span class="text">Prestamos</span>
+                  </a>
+              </li>
+              <li class="list">
+                  <a href="usuarios">
+                      <span class="icon">
+                          <ion-icon name="person-circle-outline"></ion-icon>
+                      </span>
+                      <span class="text">Usuarios</span>
+                  </a>
+              </li>
+            
+          </ul>
+      </div>
+    <div class="d-flex justify-content-end align-items-center">
       <sec:authorize access="!isAuthenticated()">
         <a href="registro" class="btn btn-success me-2">Registrase</a>
       </sec:authorize>
@@ -22,4 +51,5 @@
       </sec:authorize>
     </div>
   </div>
+  <hr>
 </div>
